out latest portfolio section

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
   </script>
 
 </head>
-<body>
+<body class="font-manrope">
 
      <!-- Header Section  -->
-     <header class="container mx-auto pb-12 lg:pt-2 ">
+     <header class="container mx-auto lg:pb-24 lg:pt-2 pb-12">
         <nav class="mx-3">
           <!-- Navbar  -->
           <div class="navbar flex justify-between mb-10">
@@ -272,7 +272,87 @@
             </div>
           </div>
         </section>
+         <!-- Latest Portfolio Section  -->
+      <section class="bg-base-200 lg:bg-white md:py-10 lg:py-20">
+        <div class="container mx-auto max-w-6xl">
+         <div class="">
+          <div class="px-5 lg:px-0 pb-7">
+            <div class="pb-2 text-center">
+              <!-- Latest work Btn -->
+              <button class="btn btn-sm text-p-color font-bold rounded-full bg-button-bg mb-5"><i class="fa-solid fa-arrow-right"></i>Explore our Latest works</details>
+              </button>
+              <!-- Portfolio Text  -->
+              <h1 class="lg:text-4xl font-extrabold text-2xl text-title-color">Our Latest Portfolio</h1>
+              <p class="font-semibold text-base lg:mx-52 md:mx-40 lg:py-7 py-5 text-p-color">
+                The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered wood, sleek metal accents.
+              </p>
+            </div>
+              <!-- card container  -->
+              <div class="grid lg:grid-cols-12 gap-5">
+                <!-- card 1  -->
+                <div class="card lg:col-span-8 lg:card-side md:col-span-12 md:card-side  bg-base-100  border-solid border rounded-2xl">
+                  <figure>
+                    <img class="w-full lg:pr-0 md:pr-0 py-6 pl-6 pr-6"
+                      src="assets/img1.png" />
+                  </figure>
+                  <!-- Card Text  -->
+                  <div class="card-body md:w-0   lg:pr-6 md:pt-6 px-6 pb-6 pt-0">
+                    <h2 class="card-title  text-p-color font-extrabold text-xl pb-3">Commercial</h2>
+                    <p class="font-medium text-p-color text-sm md:text-lg lg:text-base pb-2">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                    <!-- View Link  -->
+                    <div class="card-actions">
+                      <a class="flex gap-2 link no-underline text-lg  font-extrabold rounded-full text-title-color ">View Details
+                        <div>
+                          <!-- Icon  -->         
+                          <i class="-rotate-45 w-8 h-8 pt-2 rounded-full text-center bg-arrow-bg fa-solid fa-arrow-right"></i>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <!-- card 2 -->
+                 <div class="bg-white lg:col-span-4 md:col-span-6 p-5 border-solid border rounded-2xl">
+                  <img class="lg:object-none md:object-none lg:h-full md:h-full object-cover h-56 w-96 rounded-xl" src="assets/img2.png" alt="">
+                 </div>
+                <!-- card 3 hidden in lg-->
+                 <div class="bg-white lg:hidden col-span-1 md:col-span-6 p-5 border-solid border rounded-2xl">
+                  <img class="object-cover md:h-44 h-48 w-96 rounded-xl" src="assets/img5.png" alt="">
+                 </div>
+                 <!-- card 4 -->
+                 <div class="bg-white order-last lg:order-none lg:col-span-3 md:col-span-6 p-5 border-solid border rounded-2xl ">
+                  <img class="lg:h-full md:h-44 lg:object-none object-cover h-56 w-96 rounded-xl" src="assets/img3.png" alt="">
+                 </div>
+                 <!-- card 5  -->
+                <div class="card lg:col-span-6 lg:card-side md:col-span-12 md:card-side  bg-base-100  border-solid border rounded-2xl">
+                  <figure>
+                    <img class="w-full lg:pr-0 md:pr-0 py-6 pl-6 pr-6"
+                      src="assets/img4.png" />
+                  </figure>
+                  <!-- Card Text  -->
+                  <div class="card-body md:w-0   lg:pr-6 md:pt-6 px-6 pb-6 pt-0">
+                    <h2 class="card-title  text-p-color font-extrabold text-xl pb-3">Commercial</h2>
+                    <p class="font-medium text-p-color md:text-lg text-base pb-2">The barn house captivates with its blend of rustic charm and modern .</p>
+                    <!-- View Link  -->
+                    <div class="card-actions">
+                      <a class="flex gap-2 link no-underline text-lg  font-extrabold rounded-full text-title-color">View Details
+                        <div>
+                          <!-- Icon  -->         
+                          <i class="-rotate-45 w-8 h-8 pt-2 rounded-full text-center bg-arrow-bg fa-solid fa-arrow-right"></i>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                 <!-- card 6 -->
+                 <div class="bg-white order-last lg:order-none  lg:col-span-3 md:col-span-6 p-5 border-solid border rounded-2xl ">
+                  <img class="lg:h-full md:h-44 lg:object-none object-cover h-56 w-96 rounded-xl" src="assets/img5.png" alt="">
+                 </div>
+                
+              </div> 
         
+          </div>
+        </div>
+      </section>
       </main>
 </body>
 </html>
