--- a/index.html
+++ b/index.html
@@ -402,7 +402,43 @@
   
     </main>
   
-    <footer></footer>
+     <!-- Footer Section  -->
+     <footer 
+     class="footer footer-center bg-black py-24 px-8">
+       <!-- Footer content  -->
+       <div>
+         <!-- Logo  -->
+         <div class="Logo flex gap-2">
+           <!-- Icon  -->
+           <div class="pt-1">
+             <i class="-rotate-45 w-7 h-7 p-1.5 rounded-full text-center bg-arrow-bg fa-solid fa-arrow-right"></i>
+           </div>
+           <!-- Title  -->
+           <h1 class="text-3xl font-extrabold  text-white">Rinterio</h1>
+         </div>
+          <p class="font-semibold text-base py-4 text-p-color w-3/4">
+           The barn house captivates with its blend of rustic charm and modern sophistication,featuring weathered
+           wood, sleek metal accents.
+          </p>
+       </div>
+       
+       <nav class="grid lg:grid-flow-col md:grid-flow-col gap-5 lg:space-x-24 md:space-x-20 text-base text-stone-400 pb-3">
+         <a class="link link-hover">Home</a>
+         <a class="link link-hover">Services</a>
+         <a class="link link-hover">Portfolio</a>
+         <a class="link link-hover">Blogs</a>
+         <a class="link link-hover">Contact Us</a>
+       </nav>
+       <!-- Footer button  -->
+       <button class="flex btn border-none bg-arrow-bg text-lg font-extrabold rounded-full text-black px-10">
+         Book Consult
+         <div class="Logo gap-2">
+         <!-- Icon  -->
+         <i
+           class="-rotate-45 w-8 h-8 pt-2 rounded-full text-center bg-black text-white fa-solid fa-arrow-right"></i>
+       </div>
+       </button>
+     </footer>
   </body>
   
   </html>
