--- a/index.html
+++ b/index.html
@@ -356,7 +356,50 @@
   
           </div>
       </section>
+      <!-- Clients review Unique Section  -->
+    <section class="bg-base-200">
+        <div class="lg:w-3/4 mx-auto lg:py-20 pb-16">
+        <!-- Review title  -->
+         <div class="lg:pb-20 md:pb-10 pb-10 mx-5">
+          <h1 class="lg:text-4xl text-center font-extrabold text-2xl text-title-color pb-2">A Couple Of Words By Our Clients</h1>
+          <div class="border-b border-arrow-bg border-4 w-20 mx-auto"></div>
+         </div>
+        <!-- Card Container  -->
+         <div class="mx-5 grid md:grid-cols-2 gap-5">
+          <!-- Card 1  -->
+          <div class="card bg-base-100 shadow-xl ">
+            <div class="md:p-9 p-5 bg-button-bg">
+              <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">The documentation is great and the feature set is phenomenal, The end result is great, <span class="font-extrabold"> Highly recommended...</span></p>
+            </div>
+            <div class="h-24 flex space-x-5 md:mx-10 mx-5 mt10">
+              <div class="ring-primary ring-offset-base-100 md:w-24 md:h-24 w-20 h-20 rounded-full ring ring-offset-2 md:-mt-5">
+                <img class="rounded-full" src="assets/Female1.png" />
+              </div>
   
+              <div class="pt-5">
+                <p class="font-bold">Annie Stark</p>
+                <p class="font-medium text-p-color text-sm lg:text-base">Blockstar Company CEO</p>
+              </div>
+            </div>
+          </div>
+          <!-- Card 2  -->
+          <div class="card bg-base-100 shadow-xl ">
+            <div class="md:p-9 p-5 bg-button-bg">
+              <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Best customer support and response time I have ever seen Great, feeling from this purchase, Thank you <span class="font-extrabold">Rinterio...</span></p>
+            </div>
+            <div class="h-24 flex space-x-5 md:mx-10 mx-5 mt10">
+              <div class="ring-primary ring-offset-base-100 md:w-24 md:h-24 w-20 h-20 rounded-full ring ring-offset-2 md:-mt-5">
+                <img class="rounded-full" src="assets/Male.png" />
+              </div>
+              <div class="pt-5">
+                <p class="font-bold">Mark Stevenson</p>
+                <p class="font-medium text-p-color text-sm lg:text-base">Blockstar Company CEO</p>
+              </div>
+            </div>
+          </div>
+         </div>
+        </div>
+      </section>
       <!-- Next Project Section  -->
       <section>
         <div class="bg-cover bg-no-repeat lg:py-24 md:py-16 py-6 px-6" style="background-image: url(assets/bg.jpg);">
