--- a/index.html
+++ b/index.html
@@ -376,16 +376,16 @@
         <!-- Card 1  -->
         <div class="card bg-base-100 shadow-xl ">
           <div class="md:p-9 p-5 bg-button-bg">
-            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">The documentation is great and the feature set is phenomenal, The end result is great, <span class="font-extrabold"> Highly recommended...</span></p>
+            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Rinterio’s expertise truly impressed us. They seamlessly blended our vision with innovative architecture, delivering a space that’s both elegant and functional. <span class="font-extrabold"> Highly recommended...</span></p>
           </div>
           <div class="h-24 flex space-x-5 md:mx-10 mx-5 mt10">
             <div class="ring-primary ring-offset-base-100 md:w-24 md:h-24 w-20 h-20 rounded-full ring ring-offset-2 md:-mt-5">
-              <img class="rounded-full" src="assets/Female1.png" />
+              <img class="rounded-full" src="assets/Turner.png" />
             </div>
 
             <div class="pt-5">
-              <p class="font-bold">Annie Stark</p>
-              <p class="font-medium text-p-color text-sm lg:text-base">Blockstar Company CEO</p>
+              <p class="font-bold">Michael Turner</p>
+              <p class="font-medium text-p-color text-sm lg:text-base">CEO, ZenWorks Studios</p>
             </div>
           </div>
         </div>
@@ -393,16 +393,16 @@
         <!-- Card 2  -->
         <div class="card bg-base-100 shadow-xl ">
           <div class="md:p-9 p-5 bg-button-bg">
-            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Best customer support and response time I have ever seen Great, feeling from this purchase, Thank you <span class="font-extrabold">Rinterio...</span></p>
+            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Rinterio exceeded our expectations! Their team was professional, and the final design was both functional and visually stunning.<span class="font-extrabold">Rinterio...</span></p>
           </div>
           <div class="h-24 flex space-x-5 md:mx-10 mx-5 mt10">
             <div class="ring-primary ring-offset-base-100 md:w-24 md:h-24 w-20 h-20 rounded-full ring ring-offset-2 md:-mt-5">
-              <img class="rounded-full" src="assets/Male.png" />
+              <img class="rounded-full" src="assets/Aiko.png" />
             </div>
 
             <div class="pt-5">
-              <p class="font-bold">Mark Stevenson</p>
-              <p class="font-medium text-p-color text-sm lg:text-base">Blockstar Company CEO</p>
+              <p class="font-bold">Aiko Tanaka</p>
+              <p class="font-medium text-p-color text-sm lg:text-base">Project Manager, AIT CO.</p>
             </div>
           </div>
         </div>
