--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         <!-- Card 1  -->
         <div class="card bg-base-100 shadow-xl ">
           <div class="md:p-9 p-5 bg-button-bg">
-            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Rinterio’s expertise truly impressed us. They seamlessly blended our vision with innovative architecture, delivering a space that’s both elegant and functional. <span class="font-extrabold"> Highly recommended...</span></p>
+            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Rinterio’s expertise truly impressed us. They seamlessly blended our vision with innovative architecture, delivering a space that’s both elegant and functional. </p>
           </div>
           <div class="h-24 flex space-x-5 md:mx-10 mx-5 mt10">
             <div class="ring-primary ring-offset-base-100 md:w-24 md:h-24 w-20 h-20 rounded-full ring ring-offset-2 md:-mt-5">
@@ -393,7 +393,7 @@
         <!-- Card 2  -->
         <div class="card bg-base-100 shadow-xl ">
           <div class="md:p-9 p-5 bg-button-bg">
-            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Rinterio exceeded our expectations! Their team was professional, and the final design was both functional and visually stunning.<span class="font-extrabold">Rinterio...</span></p>
+            <p class="font-medium text-p-color text-sm md:text-lg lg:text-base italic">Rinterio exceeded our expectations! Their team was professional, and the final design was both functional and visually stunning.</p>
           </div>
           <div class="h-24 flex space-x-5 md:mx-10 mx-5 mt10">
             <div class="ring-primary ring-offset-base-100 md:w-24 md:h-24 w-20 h-20 rounded-full ring ring-offset-2 md:-mt-5">
